--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	
+	<div id="page">
+		<h1>Web Audio API Introduction</h1>
+		<div id="content">
+			<div id="dropZone">Drag and Drop a MP3 file here</div>
+			<div id="status">No files dragged</div>
+		</div>
+	</div>
 
 	<script src="app.js"></script>
 </body>
